<?xml version="1.0" encoding="utf-8"?>
<com.jsmosce.view.percentsuppor.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_select_room"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mybordergray10"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="标题"
        android:textColor="@color/colorBlack"
        app:layout_marginPercent="@string/app_dp_15"
        app:layout_textSizePercent="@string/app_dp_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGray"
        app:layout_heightPercent="@string/app_dp_1" />

    <com.jsmosce.view.percentsuppor.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_paddingBottomPercent="@string/app_dp_30">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/dialog_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/dialog_bu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/myborderwrite10"
            android:text="确定"
            app:layout_heightPercent="@string/app_dp_45"
            android:gravity="center"
            app:layout_marginLeftPercent="@string/app_dp_20"
            app:layout_marginRightPercent="@string/app_dp_20"
            android:textColor="@color/btninvalid"
            app:layout_marginTopPercent="@string/app_dp_30"
            app:layout_textSizePercent="@string/app_dp_18" />
    </com.jsmosce.view.percentsuppor.PercentLinearLayout>
</com.jsmosce.view.percentsuppor.PercentLinearLayout>