<?xml version="1.0" encoding="utf-8"?>
<com.jsmosce.view.percentsuppor.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.jsmosce.activity.ChangePasswordActivity">

    <com.jsmosce.view.TitleView
        android:id="@+id/home_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="修改密码" />

    <com.jsmosce.view.percentsuppor.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_marginTopPercent="@string/app_dp_60"
        app:layout_paddingLeftPercent="@string/app_dp_15"
        app:layout_paddingRightPercent="@string/app_dp_15">

        <com.jsmosce.view.percentsuppor.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_heightPercent="@string/app_dp_40"
            app:layout_marginTopPercent="@string/app_dp_20">

            <EditText
                android:id="@+id/change_password_oid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="请输入旧密码"
                android:inputType="textPassword"
                android:padding="0dp"
                android:textCursorDrawable="@null"
                app:layout_marginLeftPercent="@string/app_dp_10"
                app:layout_textSizePercent="@string/app_dp_14" />

        </com.jsmosce.view.percentsuppor.PercentLinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGray"
            app:layout_heightPercent="@string/app_dp_1" />


        <com.jsmosce.view.percentsuppor.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_heightPercent="@string/app_dp_40"
            app:layout_marginTopPercent="@string/app_dp_20">


            <EditText
                android:id="@+id/change_password_first"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="请输入新密码"
                android:inputType="textPassword"
                android:padding="0dp"
                android:textCursorDrawable="@null"
                app:layout_marginLeftPercent="@string/app_dp_10"
                app:layout_textSizePercent="@string/app_dp_14" />

        </com.jsmosce.view.percentsuppor.PercentLinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGray"
            app:layout_heightPercent="@string/app_dp_1" />

        <com.jsmosce.view.percentsuppor.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_heightPercent="@string/app_dp_40"
            app:layout_marginTopPercent="@string/app_dp_20">

            <EditText
                android:id="@+id/change_password_senond"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="请确认新密码"
                android:inputType="textPassword"
                android:padding="0dp"
                android:textCursorDrawable="@null"
                app:layout_marginLeftPercent="@string/app_dp_10"
                app:layout_textSizePercent="@string/app_dp_14" />

        </com.jsmosce.view.percentsuppor.PercentLinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGray"
            app:layout_heightPercent="@string/app_dp_1" />

        <Button
            android:id="@+id/change_password_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:gravity="center"
            android:text="完成"
            android:textColor="@color/colorBlack"
            app:layout_heightPercent="@string/app_dp_43"
            app:layout_marginTopPercent="@string/app_dp_24"
            app:layout_textSizePercent="@string/app_dp_18" />
    </com.jsmosce.view.percentsuppor.PercentLinearLayout>
</com.jsmosce.view.percentsuppor.PercentLinearLayout>


