<?xml version="1.0" encoding="utf-8"?>
<com.jsmosce.view.percentsuppor.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jsmosce.activity.FeedbackActivity">

    <com.jsmosce.view.TitleView
        android:id="@+id/feedback_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="意见反馈" />

    <com.jsmosce.view.percentsuppor.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="问题和意见"
            app:layout_marginPercent="@string/app_dp_12"
            app:layout_textSizePercent="@string/app_dp_12" />

        <com.jsmosce.view.percentsuppor.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            app:layout_paddingPercent="@string/app_dp_12">

            <EditText
                android:id="@+id/feedback_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:gravity="top"
                android:hint="请输入至少10个字以上的描述"
                android:lines="5"
                app:layout_textSizePercent="@string/app_dp_16" />

            <TextView
                android:id="@+id/feedback_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="0/240"
                app:layout_textSizePercent="@string/app_dp_12" />

        </com.jsmosce.view.percentsuppor.PercentLinearLayout>


        <com.jsmosce.view.percentsuppor.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            app:layout_marginTopPercent="@string/app_dp_20"
            app:layout_paddingPercent="@string/app_dp_12">

            <TextView
                android:id="@+id/feedback_img_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="请提供相关问题的截图或照片"
                android:textColor="@color/colorBlack"
                app:layout_textSizePercent="@string/app_dp_16" />

            <TextView
                android:id="@+id/feedback_img_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="end"
                android:text="0/4"
                app:layout_textSizePercent="@string/app_dp_12" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/img_gridview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/feedback_img_top"
                app:layout_marginTopPercent="@string/app_dp_15" />


            <Button
                android:id="@+id/feedback_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:text="提交"
                android:layout_below="@+id/img_gridview"
                android:textColor="@color/colorBlack"
                app:layout_heightPercent="@string/app_dp_43"
                app:layout_marginLeftPercent="@string/app_dp_14"
                app:layout_marginRightPercent="@string/app_dp_14"
                app:layout_marginTopPercent="@string/app_dp_24"
                app:layout_textSizePercent="@string/app_dp_18" />

        </com.jsmosce.view.percentsuppor.PercentRelativeLayout>


    </com.jsmosce.view.percentsuppor.PercentLinearLayout>


</com.jsmosce.view.percentsuppor.PercentLinearLayout>